--- a/app/src/main/res/layout/activity_nueva_picker.xml
+++ b/app/src/main/res/layout/activity_nueva_picker.xml
@@ -146,14 +146,16 @@
 
     <Button
         android:id="@+id/buttonOk"
-        android:layout_width="142dp"
-        android:layout_height="59dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="44dp"
-        android:text="ok"
+        android:enabled="false"
+        android:text="OK"
         app:backgroundTint="#FF8F00"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/checkedTextView7" />
 
     <TextView
         android:id="@+id/textView3"
